Refactor: Move event management functions to separate module